<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nower</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="tabs_names">
        <item>@string/title_activity_map</item>
        <item>@string/title_activity_branches_list</item>
        <item>@string/title_activity_user_promo_list</item>
    </string-array>

    <string name="google_maps_api_key">AIzaSyAYqjc0sDA7WH8tKwzjEgZa9z6CtRbGaxM</string>
    <string name="facebook_app_id">863715703721005</string>
    <string name="title_activity_map">Mapa</string>
    <string name="gps">GPS</string>
    <string name="enable_gps_suggestion">Es necesario activar el GPS para acceder a las promociones.</string>
    <string name="yes">Sí</string>
    <string name="no_thanks">No, gracias</string>
    <string name="internet_connection_required">Necesitas conexión a Internet para utilizar Nower.</string>
    <string name="loading_promos">Cargando promociones cercanas</string>
    <string name="you_are_here">¡Estás aquí!</string>
    <string name="obtaining_promo_code">Obteniendo código de promoción</string>
    <string name="obtaining_promos">Obteniendo promociones</string>
    <string name="now">NOW</string>
    <string name="promo">Promoción</string>
    <string name="confirm_taking_promo">Estás a punto de tomar esta promoción.</string>
    <string name="_continue">Continuar</string>
    <string name="cancel">Cancelar</string>
    <string name="promo_obtained">Promoción obtenida</string>
    <string name="promo_now_in_list">Ahora puedes encontrar esta promoción en tu lista de promociones.</string>
    <string name="ok">OK</string>
    <string name="title_activity_user_promo_list">Mis promociones</string>
    <string name="title_activity_branches_list">Tiendas</string>
    <string name="empty_user_promo_list">Aún no has obtenido ninguna promoción</string>
    <string name="expand_reviews">VER COMENTARIOS Y PUNTUACIÓN</string>
    <string name="promo_description">DESCRIPCIÓN</string>
    <string name="promo_terms">TÉRMINOS Y CONDICIONES</string>
    <string name="not_redeemed">POR REDIMIR</string>
    <string name="redeemed">REDIMIDAS</string>
    <string name="obtaining_your_promos">Obteniendo tus promociones</string>
    <string name="empty_branches_list">No hay tiendas con promociones cercanas a tu ubicación</string>
    <string name="full_name">Nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password_confirmation">Confirmar contraseña</string>
    <string name="birthday_date">Fecha de nacimiento</string>
    <string name="log_in">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="dont_have_account"><u>No tengo una cuenta, crear una</u></string>
    <string name="already_have_account"><u>Ya tengo una cuenta, ingresar</u></string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="write_your_email">Escribe tu correo</string>
    <string name="write_your_password">Escribe tu contraseña</string>
    <string name="logging_in">Ingresando</string>
    <string name="write_your_name">Escribe tu nombre</string>
    <string name="write_your_password_again">Escribe tu contraseña nuevamente</string>
    <string name="select_your_birthday">Selecciona tu fecha de nacimiento</string>
    <string name="select_your_gender">Selecciona tu género</string>
    <string name="passwords_not_matching">Las contraseñas no coinciden</string>
    <string name="registering">Registrando</string>
    <string name="opening_promo">Abriendo promoción</string>
    <string name="activate">Activar</string>
    <string name="obtaining_your_location">Obteniendo tu localización</string>
    <string name="go_to_my_promos">Ir a mis promociones</string>
    <string name="no_available_promos">Esta tienda no tiene promociones disponibles en el momento</string>
    <string name="internet_connection">Conexión a Internet</string>
    <string name="got_it">Entiendo</string>
    <string name="never">Never</string>
    <string name="sorry">Lo sentimos</string>
    <string name="error_loading_map">No fue posible cargar el mapa.</string>
    <string name="exit">Salir</string>
    <string name="zero">0</string>
    <string name="register_or_log_in">REGISTRARSE O INICIAR SESIÓN</string>
    <string name="menu">Menú</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="title_activity_promo_picture_viewer">Foto de promoción</string>
    <string name="no_promo_picture">Sin foto de promoción</string>
    <string name="promo_limit_exceeded">Límite de promociones excedido</string>
    <string name="login_with_facebook">Ingresar con Facebook</string>
    <string name="logout_with_facebook">Cerrar sesión</string>
    <string name="search_store">Buscar tienda</string>
    <string name="search_widget">Barra de búsqueda</string>
    <string name="default_language">es</string>
    <string name="no_results_found">No se encontraron resultados</string>
  <string name="search_promo">Buscar promoción</string>
</resources>
