<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background"
            android:fillViewport="true"
            tools:context="castofo_nower.com.co.nower.controllers.Register">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
      android:id="@+id/register_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="70dp"
      android:text="@string/app_name"
      android:textColor="@color/white"
      android:textSize="50sp"
      android:textStyle="bold"/>

    <EditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/login_field_background"
      android:drawableLeft="@drawable/ic_user_light"
      android:drawablePadding="20dp"
      android:hint="@string/full_name"
      android:inputType="textPersonName"
      android:paddingLeft="10dp"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/dark_white"/>

    <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/login_field_background"
      android:drawableLeft="@drawable/ic_email_light"
      android:drawablePadding="20dp"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:paddingLeft="10dp"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/dark_white"/>

    <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/login_field_background"
      android:drawableLeft="@drawable/ic_password_light"
      android:drawablePadding="20dp"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:paddingLeft="10dp"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/dark_white"/>

    <EditText
      android:id="@+id/password_confirmation"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/login_field_background"
      android:drawableLeft="@drawable/ic_password_light"
      android:drawablePadding="20dp"
      android:hint="@string/password_confirmation"
      android:inputType="textPassword"
      android:paddingLeft="10dp"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/dark_white"/>

    <EditText
      android:id="@+id/birthday"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/login_field_background"
      android:clickable="true"
      android:drawableLeft="@drawable/ic_gift_light"
      android:drawablePadding="20dp"
      android:editable="false"
      android:focusableInTouchMode="false"
      android:gravity="center_vertical"
      android:hint="@string/birthday_date"
      android:onClick="showDatePickerDialog"
      android:paddingLeft="10dp"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/dark_white"/>

    <RadioGroup
      android:id="@+id/gender"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:gravity="center"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"/>

      <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/male"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"/>

    </RadioGroup>

    <Button
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="30dp"
      android:background="@drawable/green_button_background"
      android:onClick="onRegisterClicked"
      android:text="@string/register"
      android:textColor="@color/dark_white"
      android:textSize="15sp"
      android:textStyle="bold"/>

    <com.facebook.login.widget.LoginButton
      android:id="@+id/login_button"
      xmlns:fb="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="30dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="30dp"
      android:textSize="15sp"
      fb:login_text="@string/login_with_facebook"
      fb:logout_text="@string/logout_with_facebook"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="40dp"
      android:layout_marginRight="40dp"
      android:layout_marginTop="20dp"
      android:clickable="true"
      android:gravity="center"
      android:onClick="onAlreadyHaveAccountClicked"
      android:padding="25dp"
      android:text="@string/already_have_account"
      android:textColor="@color/white"
      android:textSize="17sp"
      android:textStyle="bold"/>

  </LinearLayout>

</ScrollView>
